Kubernetes/gateway/algonexus-hostname-service.yaml
# k8s/algonexus-dns-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: algonexus-dns-alias
  namespace: default
spec:
  type: ExternalName
  externalName: kong-kong-proxy.kong.svc.cluster.local
